# freq-itemset-mining-algos

./: .gitignore  CMakeLists.txt  algoFramework.cpp  processData.py
c/: a.out  algoFramework.cpp  algoFramework.h  alterDB  alterDB.cpp  makefile  tests.cpp  transactionDatabase.cpp  transactionDatabase.h
code/algorithms/: ArraysAlgos.java
code/patterns/: AbstractItemset.java  AbstractOrderedItemset.java
code/test/: MainTestDEclat_bitset_saveToFile.java  MainTestDEclat_bitset_saveToMemory.java  MainTestDEclat_saveToFile.java  MainTestDEclat_saveToMemory.java  MainTestEclat_bitset_saveToFile.java  MainTestEclat_saveToFile.java  MainTestEclat_saveToMemory.java  TestUncertainDB.java  alterDBstruct.java  alterDBstructure.java  cns1  cns2  declat.java  declat.sh  eclat.java  eclat.sh  memTest.java  out.put  output.txt  switch.sh  viper.java  viper.sh
code/tools/: MemoryLogger.java
cpp-frame/: a.out  algoFramework.cpp  algoFramework.h  alterDB.cpp  llSet.cpp  llSet.h  llSet_element.cpp  llSets.cpp  llSets.h  makefile  ot  ot1  out.put  output006  script.sh  switch  test.cpp  test.txt  transactionDatabase.cpp  transactionDatabase.h
cpp-frame/UDB/: TidAndProb.cpp  TidAndProb.h  UItem.cpp  UItem.h  UTransactionDatabase.cpp  UTransactionDatabase.h  makefile  testDB  testDB.cpp  uAlgoFramework.cpp  uAlgoFramework.h
cpp-frame/massif/: massif.out.006  massif.out.007  massif.out.008  massif.out.009  massif.out.010  massif.out.011  massif.out.012  massif.out.013  massif.out.014  (+6 more)
datasets/: c20d10k.txt  test1.txt  test2.txt  uncertainSample.txt
scala/: build.sbt
(+54 files in other folders)
